--- a/Documentation/CMakeLists.txt
+++ b/Documentation/CMakeLists.txt
@@ -23,7 +23,7 @@ IF( ITKTOOLS_BUILD_DOCUMENTATION)
   execute_process(COMMAND ${ExeDir}/pxclosestversor3Dtransform -help ERROR_FILE ${OutDir}/closestversor3Dtransform.help)
   execute_process(COMMAND ${ExeDir}/pxcombinesegmentations -help ERROR_FILE ${OutDir}/combinesegmentations.help)
   execute_process(COMMAND ${ExeDir}/pxcomputeboundingbox -help ERROR_FILE ${OutDir}/computeboundingbox.help)
-  execute_process(COMMAND ${ExeDir}/pxcomputedifferenceimageBIG -help ERROR_FILE ${OutDir}/computedifferenceimageBIG.help)
+  execute_process(COMMAND ${ExeDir}/pxcomputedifferenceimageBIG -help ERROR_FILE ${OutDir}/computedifferenceimage.help)
   execute_process(COMMAND ${ExeDir}/pxcomputemean -help ERROR_FILE ${OutDir}/computemean.help)
   execute_process(COMMAND ${ExeDir}/pxcomputeoverlap -help ERROR_FILE ${OutDir}/computeoverlap.help)
   execute_process(COMMAND ${ExeDir}/pxcontrastenhanceimage -help ERROR_FILE ${OutDir}/contrastenhanceimage.help)
@@ -38,7 +38,7 @@ IF( ITKTOOLS_BUILD_DOCUMENTATION)
   execute_process(COMMAND ${ExeDir}/pxcreatezeroimage -help ERROR_FILE ${OutDir}/createzeroimage.help)
   execute_process(COMMAND ${ExeDir}/pxcropimage -help ERROR_FILE ${OutDir}/cropimage.help)
   execute_process(COMMAND ${ExeDir}/pxdeformationfieldgenerator -help ERROR_FILE ${OutDir}/deformationfieldgenerator.help)
-  execute_process(COMMAND ${ExeDir}/pxdetectgoldmarkers -help ERROR_FILE ${OutDir}/detectgoldmarkers.help)
+  execute_process(COMMAND ${ExeDir}/pxdeformationfieldoperator -help ERROR_FILE ${OutDir}/deformationfieldoperator.help)
   execute_process(COMMAND ${ExeDir}/pxdistancetransform -help ERROR_FILE ${OutDir}/distancetransform.help)
   execute_process(COMMAND ${ExeDir}/pxextracteveryotherslice -help ERROR_FILE ${OutDir}/extracteveryotherslice.help)
   execute_process(COMMAND ${ExeDir}/pxextractindexfromvectorimage -help ERROR_FILE ${OutDir}/extractindexfromvectorimage.help)
@@ -46,13 +46,13 @@ IF( ITKTOOLS_BUILD_DOCUMENTATION)
   execute_process(COMMAND ${ExeDir}/pxfftimage -help ERROR_FILE ${OutDir}/fftimage.help)
   execute_process(COMMAND ${ExeDir}/pxgaussianimagefilter -help ERROR_FILE ${OutDir}/gaussianimagefilter.help)
   execute_process(COMMAND ${ExeDir}/pxgetdicominformation -help ERROR_FILE ${OutDir}/getdicominformation.help)
-  execute_process(COMMAND ${ExeDir}/pxgetDICOMseriesUIDs  -help ERROR_FILE ${OutDir}/getDICOMseriesUIDs.help)
+  execute_process(COMMAND ${ExeDir}/pxgetDICOMseriesUIDs -help ERROR_FILE ${OutDir}/getDICOMseriesUIDs.help)
   execute_process(COMMAND ${ExeDir}/pxgetimageinformation -help ERROR_FILE ${OutDir}/getimageinformation.help)
   execute_process(COMMAND ${ExeDir}/pxgetpointsinimage -help ERROR_FILE ${OutDir}/getpointsinimage.help)
   execute_process(COMMAND ${ExeDir}/pxgiplconvert -help ERROR_FILE ${OutDir}/giplconvert.help)
   execute_process(COMMAND ${ExeDir}/pxhistogramequalizeimage -help ERROR_FILE ${OutDir}/histogramequalizeimage.help)
   execute_process(COMMAND ${ExeDir}/pximagecompare -help ERROR_FILE ${OutDir}/imagecompare.help)
-  execute_process(COMMAND ${ExeDir}/pximagestovectorimage -help ERROR_FILE ${OutDir}/averagevectormagnitude.help)
+  execute_process(COMMAND ${ExeDir}/pximagestovectorimage -help ERROR_FILE ${OutDir}/imagestovectorimage.help)
   execute_process(COMMAND ${ExeDir}/pxintensityreplace -help ERROR_FILE ${OutDir}/intensityreplace.help)
   execute_process(COMMAND ${ExeDir}/pxintensitywindowing -help ERROR_FILE ${OutDir}/intensitywindowing.help)
   execute_process(COMMAND ${ExeDir}/pxinvertintensityimagefilter -help ERROR_FILE ${OutDir}/invertintensityimagefilter.help)
