-ADD: ITKToolsBase -ENH: Rewrote replacevoxel using a new pixeltype selection strategy. It seems to work,and no macros are used.

--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -10,6 +10,8 @@ ADD_LIBRARY( ITKTools-Common
  itkCommandLineArgumentParser.h
  CommandLineArgumentHelper.cxx
  CommandLineArgumentHelper.h
+ ITKToolsBase.cxx
+ ITKToolsBase.h
  )
 
 TARGET_LINK_LIBRARIES( ITKTools-Common ${ITK_LIBRARIES} )
