ENH: added DICOM support again to pxcastconvert COMP: broke pxcastconvert into smaller compilation units ENH: added -opct support again to pxcastconvert ENH: some ITKToolsHelper function signatures made by reference

--- a/src/castconvert/CMakeLists.txt
+++ b/src/castconvert/CMakeLists.txt
@@ -6,10 +6,13 @@ FIND_PACKAGE( ITK REQUIRED )
 INCLUDE( ${ITK_USE_FILE} )
 
 ADD_EXECUTABLE( pxcastconvert
- castconvert.cxx
- castconverthelpers.h
- castconverthelpers2.h
- )
+  castconvert.cxx
+  castconvert2D.cxx
+  castconvert3D.cxx
+  castconvertDICOM.cxx
+  castconverthelpers.h
+  castconverthelpers2.h
+)
 
 TARGET_LINK_LIBRARIES( pxcastconvert ITKTools-Common ${ITK_LIBRARIES} )
 
