--- a/Testing/CMakeLists.txt
+++ b/Testing/CMakeLists.txt
@@ -446,13 +446,13 @@ add_test(NAME LogicalImageOperatorTest_OR
 #          DEPENDS WeightedAdditionOutput)
 
 #These tests are not px applications, but internal tests
-ADD_EXECUTABLE( ChannelByChannelVectorImageFilterTest
-  ChannelByChannelVectorImageFilterTest.cxx )
-
-TARGET_LINK_LIBRARIES( ChannelByChannelVectorImageFilterTest ITKTools-Common ${ITK_LIBRARIES} )
-
-INSTALL( TARGETS ChannelByChannelVectorImageFilterTest
-  RUNTIME DESTINATION ${ITKTools_INSTALL_DIR} )
-
-add_test(NAME ChannelByChannelVectorImageFilterOutput COMMAND ChannelByChannelVectorImageFilterTest )
-add_test(NAME ChannelByChannelVectorImageFilterValidate COMMAND ${ExeDir}/pximagecompare DEPENDS ChannelByChannelVectorImageFilterOutput)
+# ADD_EXECUTABLE( ChannelByChannelVectorImageFilterTest
+#   ChannelByChannelVectorImageFilterTest.cxx )
+# 
+# TARGET_LINK_LIBRARIES( ChannelByChannelVectorImageFilterTest ITKTools-Common ${ITK_LIBRARIES} )
+# 
+# INSTALL( TARGETS ChannelByChannelVectorImageFilterTest
+#   RUNTIME DESTINATION ${ITKTools_INSTALL_DIR} )
+# 
+# add_test(NAME ChannelByChannelVectorImageFilterOutput COMMAND ChannelByChannelVectorImageFilterTest )
+# add_test(NAME ChannelByChannelVectorImageFilterValidate COMMAND ${ExeDir}/pximagecompare DEPENDS ChannelByChannelVectorImageFilterOutput)
