--- a/src/contrastenhanceimage/CMakeLists.txt
+++ b/src/contrastenhanceimage/CMakeLists.txt
@@ -1,14 +1,3 @@
-# This project is intended to be built outside the Insight source tree
-PROJECT( contrastenhanceimage )
-
-# Find ITK.
-FIND_PACKAGE( ITK REQUIRED )
-INCLUDE( ${ITK_USE_FILE} )
-
-ADD_EXECUTABLE( pxcontrastenhanceimage contrastenhanceimage.cxx contrastenhanceimage.h )
-
-TARGET_LINK_LIBRARIES( pxcontrastenhanceimage ITKTools-Common ${ITK_LIBRARIES} )
-
-INSTALL( TARGETS pxcontrastenhanceimage
-  RUNTIME DESTINATION ${ITKTools_INSTALL_DIR} )
+# Add the tool
+ADD_ITKTOOL( contrastenhanceimage )
 
