--- a/src/histogramequalizeimage/CMakeLists.txt
+++ b/src/histogramequalizeimage/CMakeLists.txt
@@ -1,18 +1,3 @@
-# This project is intended to be built outside the Insight source tree
-PROJECT( histogramequalizeimage )
-
-# Find ITK.
-FIND_PACKAGE( ITK REQUIRED )
-INCLUDE( ${ITK_USE_FILE} )
-
-ADD_EXECUTABLE( pxhistogramequalizeimage
-  histogramequalizeimage.cxx
-  histogramequalizeimage.h
-  itkHistogramEqualizationImageFilter.h
-  itkHistogramEqualizationImageFilter.hxx )
-
-TARGET_LINK_LIBRARIES( pxhistogramequalizeimage ITKTools-Common ${ITK_LIBRARIES} )
-
-INSTALL( TARGETS pxhistogramequalizeimage
-  RUNTIME DESTINATION ${ITKTools_INSTALL_DIR} )
+# Add the tool
+ADD_ITKTOOL( histogramequalizeimage )
 
