--- a/src/naryimageoperator/CMakeLists.txt
+++ b/src/naryimageoperator/CMakeLists.txt
@@ -1,24 +1,3 @@
-# This project is intended to be built outside the Insight source tree
-PROJECT( naryimageoperator )
-
-# Increases address capacity
-IF ( WIN32 )
-  SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /bigobj" )
-  SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /bigobj" )
-ENDIF ( WIN32 )
-
-# Find ITK.
-FIND_PACKAGE( ITK REQUIRED )
-INCLUDE( ${ITK_USE_FILE} )
-
-ADD_EXECUTABLE( pxnaryimageoperator
- naryimageoperator.cxx
- itkNaryFunctors.h
- NaryImageOperatorHelper.h
- NaryImageOperatorMainHelper.h )
-
-TARGET_LINK_LIBRARIES( pxnaryimageoperator ITKTools-Common ${ITK_LIBRARIES} )
-
-INSTALL( TARGETS pxnaryimageoperator
-  RUNTIME DESTINATION ${ITKTools_INSTALL_DIR} )
+# Add the tool
+ADD_ITKTOOL( naryimageoperator )
 
