--- a/src/extractindexfromvectorimage/CMakeLists.txt
+++ b/src/extractindexfromvectorimage/CMakeLists.txt
@@ -1,20 +1,3 @@
-# This project is intended to be built outside the Insight source tree
-PROJECT( extractindexfromvectorimage )
-
-# Increases address capacity
-IF ( WIN32 )
-  SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /bigobj" )
-  SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /bigobj" )
-ENDIF ( WIN32 )
-
-# Find ITK.
-FIND_PACKAGE( ITK REQUIRED )
-INCLUDE( ${ITK_USE_FILE} )
-
-ADD_EXECUTABLE( pxextractindexfromvectorimage extractindexfromvectorimage.cxx )
-
-TARGET_LINK_LIBRARIES( pxextractindexfromvectorimage ITKTools-Common ${ITK_LIBRARIES} )
-
-INSTALL( TARGETS pxextractindexfromvectorimage
-  RUNTIME DESTINATION ${ITKTools_INSTALL_DIR} )
+# Add the tool
+ADD_ITKTOOL( extractindexfromvectorimage )
 
