--- a/src/replacevoxel/CMakeLists.txt
+++ b/src/replacevoxel/CMakeLists.txt
@@ -1,14 +1,3 @@
-# This project is intended to be built outside the Insight source tree
-PROJECT( replacevoxel )
-
-# Find ITK.
-FIND_PACKAGE( ITK REQUIRED )
-INCLUDE( ${ITK_USE_FILE} )
-
-ADD_EXECUTABLE( pxreplacevoxel replacevoxel.cxx )
-
-TARGET_LINK_LIBRARIES( pxreplacevoxel ITKTools-Common ${ITK_LIBRARIES} )
-
-INSTALL( TARGETS pxreplacevoxel
-  RUNTIME DESTINATION ${ITKTools_INSTALL_DIR} )
+# Add the tool
+ADD_ITKTOOL( replacevoxel )
 
