--- a/src/rescaleintensityimagefilter/CMakeLists.txt
+++ b/src/rescaleintensityimagefilter/CMakeLists.txt
@@ -1,14 +1,3 @@
-# This project is intended to be built outside the Insight source tree
-PROJECT( rescaleintensityimagefilter )
-
-# Find ITK.
-FIND_PACKAGE( ITK REQUIRED )
-INCLUDE( ${ITK_USE_FILE} )
-
-ADD_EXECUTABLE( pxrescaleintensityimagefilter rescaleintensityimagefilter.cxx )
-
-TARGET_LINK_LIBRARIES( pxrescaleintensityimagefilter ITKTools-Common ${ITK_LIBRARIES} )
-
-INSTALL( TARGETS pxrescaleintensityimagefilter
-  RUNTIME DESTINATION ${ITKTools_INSTALL_DIR} )
+# Add the tool
+ADD_ITKTOOL( rescaleintensityimagefilter )
 
