COMP: adding include path for distance transform This was caused by changing the deprecated SUBDIRS to add_subdirectory

--- a/src/distancetransform/CMakeLists.txt
+++ b/src/distancetransform/CMakeLists.txt
@@ -1,3 +1,5 @@
 # Add the tool
 ADD_ITKTOOL( distancetransform )
 
+# Depends on some filters in the directory morphology
+INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}"/morphology" )
