-BUG: the quotes were wrong

--- a/src/distancetransform/CMakeLists.txt
+++ b/src/distancetransform/CMakeLists.txt
@@ -2,4 +2,4 @@
 ADD_ITKTOOL( distancetransform )
 
 # Depends on some filters in the directory morphology
-INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}"/morphology" )
+INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/morphology )
