ENH: cleaned up common and its use
REM: removed common/ITKToolsBase.cxx since it was empty and will generate nothing since it is a pure virtual base class.
ENH: Make use of the fact that itk::ImageIOBase::GetComponentTypeFromString is a static function, so we don't need to create an instance of itk::ImageIOBase to use it.
ENH: Instead of itktools::GetComponentTypeFromString use the one from itk::ImageIOBase.
REM: Remove the function itktools::GetComponentTypeFromString.
STYLE: removed some #undefed code from ITKToolsHelpers.
ENH: make ComponentTypeIsInteger pass by reference.
BUG: GetLargestComponentType returned a stripped version of the largest component type, instead of just the largest component type.
ENH: Use functionality from itk::ImageIOBase in FillImageIOBase instead of repeating that code.

--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -15,8 +15,7 @@ ADD_LIBRARY( ITKTools-Common
   ITKToolsHelpers.cxx
   ITKToolsImageProperties.h
   ITKToolsImageProperties.cxx
-  ITKToolsBase.h
-  ITKToolsBase.cxx )
+  ITKToolsBase.h )
 
 TARGET_LINK_LIBRARIES( ITKTools-Common ${ITK_LIBRARIES} )
 
